<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC373636"
    tools:context=".MainActivity"
    android:id="@+id/main_screen_layout">


    <Button
        android:id="@+id/addButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/ic_baseline_add_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

    <ImageView
        android:id="@+id/BoatCartoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:srcCompat="@drawable/cartoon_boat" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/FirstRecycleView"
        android:layout_width="263dp"
        android:layout_height="406dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596"
        android:background="@drawable/border"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>


</androidx.constraintlayout.widget.ConstraintLayout>