<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_app_color"
    tools:context=".BoatActivity"
    android:id="@+id/boat_screen_layout">

    <TextView
        android:id="@+id/boats"
        android:layout_width="240dp"
        android:layout_height="66dp"
        android:gravity="center_horizontal"
        android:text="@string/boats"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/BoatsRecycleView"
        android:layout_width="260dp"
        android:layout_height="293dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

    <Button
        android:id="@+id/go_back_boats"
        android:layout_width="92dp"
        android:layout_height="39dp"
        android:background="@drawable/goback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789"
        android:gravity="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>