<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_trip_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC373636"
    tools:context=".NewTripActivity">


    <TextView
        android:id="@+id/Ports"
        android:layout_width="110dp"
        android:layout_height="61dp"
        android:gravity="center_horizontal"
        android:text="@string/ports"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531" />

    <TextView
        android:id="@+id/NewTripTopCenter"
        android:layout_width="240dp"
        android:layout_height="66dp"
        android:gravity="center_horizontal"
        android:text="@string/new_trip"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <LinearLayout
        android:id="@+id/FromTO"
        android:layout_width="315dp"
        android:layout_height="90dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204">

        <EditText
            android:id="@+id/from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:hint="From"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"


            />

        <EditText
            android:id="@+id/To_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:hint="To"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp" />
    </LinearLayout>


    <EditText
        android:id="@+id/NumberOfPeople"
        android:layout_width="180dp"
        android:layout_height="37dp"
        android:layout_margin="5sp"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:hint="Number of People:"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416" />

    <TextView
        android:id="@+id/textViewHere"
        android:layout_width="136dp"
        android:layout_height="174dp"
        android:gravity="top"
        android:text="No ports added yet"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <Button
        android:id="@+id/addButtonTripPage"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/ic_baseline_add_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <TextView
        android:id="@+id/addNewPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:text="@string/add_new_port"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814" />

    <TextView
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:text="@string/Confirm"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924" />

    <Button
        android:id="@+id/goOn"
        android:layout_width="92dp"
        android:layout_height="39dp"
        android:background="@drawable/svgviewer_output"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933" />


</androidx.constraintlayout.widget.ConstraintLayout>